--- a/package.json
+++ b/package.json
@@ -17,18 +17,22 @@
     "ts": "ts-node"
   },
   "devDependencies": {
-    "@types/node": "18.17.17",
+    "@types/chalk-animation": "^1.6.3",
+    "@types/node": "^18.17.17",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
     "rimraf": "5.0.1",
-    "ts-node": "10.9.1",
-    "typescript": "5.2.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "type": "module",
   "engines": {
     "node": "^18.0.0",
     "npm": ">=8"
+  },
+  "dependencies": {
+    "chalk-animation": "^2.0.3"
   }
 }
