--- a/package.json
+++ b/package.json
@@ -9,22 +9,26 @@
   ],
   "main": "main.js",
   "scripts": {
-    "start": "npm run build && node ./dist/main.js",
+    "start": "npm run build && node ./dist/main.rest.js",
+    "start:dev": "npm run ts ./src/main.rest.ts | pino-pretty --colorize --translateTime",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
-    "ts": "ts-node",
+    "ts": "node --loader ts-node/esm",
     "mock:server": "json-server ./src/mocks/mock-server-data.json --port 3123"
   },
   "devDependencies": {
     "@types/chalk-animation": "^1.6.3",
+    "@types/convict": "^6.1.6",
+    "@types/convict-format-with-validator": "^6.0.5",
     "@types/node": "^18.17.17",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
     "json-server": "^1.0.0-beta.3",
+    "pino-pretty": "^13.0.0",
     "rimraf": "5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
@@ -36,6 +40,13 @@
   },
   "dependencies": {
     "chalk-animation": "^2.0.3",
-    "got": "^14.4.6"
+    "convict": "^6.2.4",
+    "convict-format-with-validator": "^6.2.0",
+    "dotenv": "^16.5.0",
+    "got": "^14.4.6",
+    "inversify": "^7.5.1",
+    "pino": "^9.6.0",
+    "reflect-metadata": "^0.2.2",
+    "tslib": "^2.8.1"
   }
 }
