--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "npm": ">=8"
   },
   "dependencies": {
+    "@typegoose/typegoose": "11.5.0",
     "chalk-animation": "^2.0.3",
     "convict": "^6.2.4",
     "convict-format-with-validator": "^6.2.0",
     "dotenv": "^16.5.0",
     "got": "^14.4.6",
-    "inversify": "^7.5.1",
+    "inversify": "6.0.1",
+    "mongoose": "7.5.3",
     "pino": "^9.6.0",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.8.1"
