--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@typegoose/typegoose": "11.5.0",
     "chalk-animation": "^2.0.3",
+    "class-validator": "^0.14.2",
     "convict": "^6.2.4",
     "convict-format-with-validator": "^6.2.0",
     "dotenv": "^16.5.0",
