--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/chalk-animation": "^1.6.3",
     "@types/convict": "^6.1.6",
     "@types/convict-format-with-validator": "^6.0.5",
+    "@types/express": "^5.0.2",
     "@types/node": "^18.17.17",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -41,11 +42,15 @@
   "dependencies": {
     "@typegoose/typegoose": "11.5.0",
     "chalk-animation": "^2.0.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "convict": "^6.2.4",
     "convict-format-with-validator": "^6.2.0",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
     "got": "^14.4.6",
+    "http-status-codes": "^2.3.0",
     "inversify": "6.0.1",
     "mongoose": "7.5.3",
     "pino": "^9.6.0",
