--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/convict": "^6.1.6",
     "@types/convict-format-with-validator": "^6.0.5",
     "@types/express": "^5.0.2",
+    "@types/mime-types": "2.1.2",
+    "@types/multer": "1.4.8",
     "@types/node": "^18.17.17",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -52,7 +54,10 @@
     "got": "^14.4.6",
     "http-status-codes": "^2.3.0",
     "inversify": "6.0.1",
+    "mime-types": "2.1.35",
     "mongoose": "7.5.3",
+    "multer": "1.4.5-lts.1",
+    "nanoid": "^5.1.5",
     "pino": "^9.6.0",
     "reflect-metadata": "^0.2.2",
     "tslib": "^2.8.1"
