--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "six-cities",
-  "version": "5.0.0",
+  "version": "0.0.1",
   "description": "Проект «Шесть городов» от HTML Academy",
   "keywords": [
     "rest",
@@ -9,57 +9,62 @@
   ],
   "main": "main.js",
   "scripts": {
-    "start": "npm run build && node ./dist/main.rest.js",
-    "start:dev": "npm run ts ./src/main.rest.ts | pino-pretty --colorize --translateTime",
+    "start": "npm run build && ts-node ./dist/main.cli.js",
+    "start:dev": "nodemon",
+    "cli": "node --loader ts-node/esm ./src/main.cli.ts",
     "build": "npm run clean && npm run compile",
     "lint": "eslint src/ --ext .ts",
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
-    "ts": "node --loader ts-node/esm",
-    "mock:server": "json-server ./src/mocks/mock-server-data.json --port 3123"
+    "ts": "ts-node",
+    "mock:server": "json-server ./mocks/mock-server-data.json --port 3123"
   },
   "devDependencies": {
-    "@types/chalk-animation": "^1.6.3",
-    "@types/convict": "^6.1.6",
-    "@types/convict-format-with-validator": "^6.0.5",
-    "@types/express": "^5.0.2",
+    "@types/convict": "6.1.4",
+    "@types/convict-format-with-validator": "6.0.3",
+    "@types/cors": "2.8.17",
+    "@types/express": "4.17.18",
     "@types/mime-types": "2.1.2",
     "@types/multer": "1.4.8",
-    "@types/node": "^18.17.17",
+    "@types/node": "^18.17.15",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
     "eslint": "8.49.0",
     "eslint-config-htmlacademy": "9.1.1",
-    "json-server": "^1.0.0-beta.3",
-    "pino-pretty": "^13.0.0",
+    "json-server": "0.17.3",
+    "pino-pretty": "10.2.0",
     "rimraf": "5.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "ts-node": "10.9.1",
+    "tslib": "2.6.2",
+    "typescript": "5.2.2"
   },
   "type": "module",
   "engines": {
     "node": "^18.0.0",
-    "npm": ">=8"
+    "npm": ">=10"
   },
   "dependencies": {
-    "@typegoose/typegoose": "11.5.0",
-    "chalk-animation": "^2.0.3",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
-    "convict": "^6.2.4",
-    "convict-format-with-validator": "^6.2.0",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "express-async-handler": "^1.2.0",
-    "got": "^14.4.6",
-    "http-status-codes": "^2.3.0",
+    "@typegoose/typegoose": "12.16.0",
+    "chalk": "^4.1.2",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
+    "convict": "6.2.4",
+    "convict-format-with-validator": "6.2.0",
+    "cors": "2.8.5",
+    "dayjs": "1.11.10",
+    "dotenv": "16.3.1",
+    "express": "5.0.0",
+    "express-async-handler": "1.2.0",
+    "got": "13.0.0",
+    "http-status-codes": "2.3.0",
     "inversify": "6.0.1",
+    "jose": "4.15.5",
     "mime-types": "2.1.35",
-    "mongoose": "7.5.3",
-    "multer": "1.4.5-lts.1",
-    "nanoid": "^5.1.5",
-    "pino": "^9.6.0",
-    "reflect-metadata": "^0.2.2",
-    "tslib": "^2.8.1"
+    "mongoose": "8.15.0",
+    "multer": "2.0.0",
+    "nanoid": "5.1.5",
+    "nodemon": "3.1.9",
+    "pino": "8.15.1",
+    "reflect-metadata": "0.1.13"
   }
 }
